--- a/docker/tfwelcome.html
+++ b/docker/tfwelcome.html
@@ -14,13 +14,13 @@
             From a handy linux console, please use <br>
             <code>docker ps</code><br>
             to find this container's name then use<br>
-            <code>docker exec *thiscontainername* config/post-start-actions.sh</code>
+            <code>docker exec *thiscontainername* supervisorctl restart galaxy: </code>
             <br>
-            to load the sample tool generators to fully populate this container.
+            to restart this container before first using it - no idea why it's needed.<br>
             until the Dockerfile for this container figures out how to load a workflow during the build correctly.<br>
-            To run the workflow you need two small datasets until I get them loaded<br>
+            To run the workflow you need two small datasets that should be in a nice new history<br>
             PhiX.fasta from the Galaxy test-sample directory, and any smallish text file you want such as a readme or script.
-            When you run the workflow, feed the fasta where it says, and the text file where you see rgToolFactory.py<br>
+            When you run the installed workflow, feed the fasta where it says, and the text file where you see rgToolFactory.py<br>
             Send it to the same history and let it run.<br>
             With any luck, you will have a history of examples to play with - use the rerun button to repopulate the ToolFactory form to illustrate</br>
             positional and argparse style parameter passing for python, a simple bash script using STDIN/STDOUT and the perl (ugh) example from planemo</br>
